[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markets"
version = "0.1.0"
description = "A Python package for studying the dynamics of the market correlation structure"
readme = "README.rst"
authors = [
  {name = "Adriano Valdes-Gomez", email = "adriano@ciencias.unam.mx"}
]
maintainers = [
  {name = "Adriano Valdes-Gomez", email = "adriano@ciencias.unam.mx"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/AdrianoValdesGomez/markets/issues"
changelog = "https://github.com/AdrianoValdesGomez/markets/blob/master/changelog.md"
homepage = "https://github.com/AdrianoValdesGomez/markets"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

